fix: resolve all 64 forbidden-API violations (explicit locale/charset/timezone)