@@ -27,6 +27,7 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -133,12 +134,12 @@ public class KvjItemDataLoader extends ItemDataLoader {
 
 	private File getFile(int iid) {
 		File f;
-		String id = "%08d".formatted(iid);
+		String id = String.format(Locale.ROOT, "%08d", iid);
 		String cat = InventoryTools.getCategoryName(iid);
 		if (cat == null)
 			f = null;
 		else if (cat.equals("Pet"))
-			f = new File(new StringBuilder(dataPath).append("Item.wz").append(File.separator).append(cat).append(File.separator).append("%07d".formatted(iid)).append(".img.kvj").toString());
+			f = new File(new StringBuilder(dataPath).append("Item.wz").append(File.separator).append(cat).append(File.separator).append(String.format(Locale.ROOT, "%07d", iid)).append(".img.kvj").toString());
 		else if (cat.equals("Equip"))
 			f = new File(new StringBuilder(dataPath).append("Character.wz").append(File.separator).append(InventoryTools.getCharCat(iid)).append(File.separator).append(id).append(".img.kvj").toString());
 		else
