@@ -22,6 +22,7 @@ import argonms.common.util.input.LittleEndianByteArrayReader;
 import argonms.common.util.input.LittleEndianReader;
 import java.io.File;
 import java.io.IOException;
+import java.util.Locale;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -44,7 +45,7 @@ public class KvjNpcDataLoader extends NpcDataLoader {
 
 	@Override
 	protected void load(int npcId) {
-		String id = "%07d".formatted(npcId);
+		String id = String.format(Locale.ROOT, "%07d", npcId);
 
 		try {
 			File f = new File(new StringBuilder(dataPath).append("Npc.wz").append(File.separator).append(id).append(".img.kvj").toString());
